--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
